# ibex-smart-contract

./: .gitignore  Cargo.toml  Developing.md  README.md  package-lock.json
examples/: schema.rs
src/: batch.rs  contract.rs  lib.rs  msg.rs  state.rs  transaction_history.rs
src/claim/: claim.rs  de.rs  expiration.rs  helpers.rs  keys.rs  map.rs  mod.rs  path.rs
src/helpers/: helpers.rs
src/storage/: expiration.rs  map.rs
